--- a/readme.html
+++ b/readme.html
@@ -13,14 +13,16 @@
     <h1 id="game-title"><a href="#team">Save The World</a></h1>
 </section>
 <section class="two">
-    <h2 id="team">Unser Team</h2>
-    <div id="team-row">
-        <div class="team-member">
-            <img class="img-member" src="img/lennart_portrait.jpg">
-            <div class="description">
-                <h3 class="team-name">Lennart Kappes</h3>
-                <p>Hauptaufgaben:</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+    <div id="content-sec-two">
+        <h2 id="team">Unser Team</h2>
+        <div id="team-row">
+            <div class="team-member">
+                <img class="img-member" src="img/lennart_portrait.jpg">
+                <div class="description">
+                    <h3 class="team-name">Lennart Kappes</h3>
+                    <p>Hauptaufgaben:</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
             </div>
         </div>
     </div>
