--- a/readme.html
+++ b/readme.html
@@ -34,9 +34,9 @@
                 </div>
             </div>
             <div class="team-member">
-                <img class="img-member" src="img/lennart_portrait.jpg">
+                <img class="img-member" src="img/senya_portrait.jpg">
                 <div class="description">
-                    <h3 class="team-name">Lennart Kappes</h3>
+                    <h3 class="team-name">Senya Bär</h3>
                     <p class="sub_headline">Hauptaufgaben:</p>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
