updated readme file

--- a/readme.html
+++ b/readme.html
@@ -11,7 +11,7 @@
 <body>
 
 <section class="one">
-    <h1 id="game-title"><a href="#team">Echoes of the Past:<br><!--<br><img id="arrow-down" src="img/arrow-down2.png">--><h2>A Mission to Save Humanity</h2></a></h1>
+    <h1 id="game-title"><a href="#team">Echoes of the Past:<br><!--<br><img id="arrow-down" src="img/arrow-down2.png">--><h2 id="subtitle">A Mission to Save Humanity</h2></a></h1>
 </section>
 <section class="content">
     <div id="content-sec-two">
@@ -20,33 +20,27 @@
             <div class="team-member">
                 <img class="img-member" src="img/lennart_portrait.jpg">
                 <div class="description">
-                    <h3 class="team-name">Lennart Kappes</h3>
-                    <p class="sub_headline">Hauptaufgaben:</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3 class="team-name">Julian Klink</h3>
+                    <!--<p class="sub_headline">Hauptaufgaben:</p>
+                    <p>Lorem ipsum dolor sit amet.</p>-->
                 </div>
             </div>
             <div class="team-member">
                 <img class="img-member" src="img/michl_portrait.jpeg">
                 <div class="description">
                     <h3 class="team-name">Michael Pichlmeier</h3>
-                    <p class="sub_headline">Hauptaufgaben:</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
             <div class="team-member">
                 <img class="img-member" src="img/senya_portrait.jpg">
                 <div class="description">
                     <h3 class="team-name">Senya Bär</h3>
-                    <p class="sub_headline">Hauptaufgaben:</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
             <div class="team-member">
                 <img class="img-member" src="img/lennart_portrait.jpg">
                 <div class="description">
                     <h3 class="team-name">Lennart Kappes</h3>
-                    <p class="sub_headline">Hauptaufgaben:</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
         </div>
@@ -144,6 +138,47 @@
                 Bienen sorgen für die Bestäubung unzähliger Pflanzen und damit für den Erhalt von Ökosystemen. Die Nahrungskette kann durch sie aufrechterhalten werden und Tiere und Pflanzen reichhaltig ernährt werden.
                 In der Zukunft gibt es schon lange keine Bienen mehr. Nimm diesen Bienenstock mit, Ava. Mögen sie sich fleißig vermehren und die Artenvielfalt wieder herstellen.
 
+            </p>
+        </div>
+    </div>
+</section>
+<section class="content2">
+    <h2 class="project">Projekt&shy;dokumen&shy;tation</h2>
+    <div id="documentation-container">
+        <div id="documentation">
+            <div class="doc-pages">
+                <a href="https://github.com/Klibink/DH-und-Informatik.git" target="_blank"><img class="doc-logos" src="img/github-mark.png"><h3>Github &#8250;</h3> </a>
+            </div>
+            <div class="doc-pages">
+                <a href="https://trello.com/w/dhprojekt1" target="_blank"><img class="doc-logos" style="background-color: rgba(0,0,0,0) !important;" src="img/trello-logo.png"><h3>Trello &#8250;</h3> </a>
+            </div>
+        </div>
+        <div class="installation-tipps">
+            <h2 class="headline-game-concept">Installation</h2>
+            <ul style="padding-inline-start: 20px">
+                <li>Bewege die Spielfigur in der Overworld mit den Tasten W, A, S und D, oder mit den Pfeiltasten.</li>
+                <li>Klicke links oben im Eck auf das Fragezeichen, um Informationen zur Story und Steuerung zu erhalten.</li>
+                <li>Klicke rechts oben im Eck auf das Zahnrad-Symbol, um den Spielstand zu speichern, den Ton auszuschalten, das Spiel zu pausieren oder zu verlassen.</li>
+                <li>Bei Beginn jedes Minispiels gibt es einen Button, der dir die Steuerung und das Ziel des jeweiligen Spiels erklärt.</li>
+            </ul>
+        </div>
+        <div class="installation-tipps">
+            <h2 class="headline-game-concept">Tipps und Hilfe</h2>
+            <ul style="padding-inline-start: 20px">
+                <li>Bewege die Spielfigur in der Overworld mit den Tasten W, A, S und D, oder mit den Pfeiltasten.</li>
+                <li>Klicke links oben im Eck auf das Fragezeichen, um Informationen zur Story und Steuerung zu erhalten.</li>
+                <li>Klicke rechts oben im Eck auf das Zahnrad-Symbol, um den Spielstand zu speichern, den Ton auszuschalten, das Spiel zu pausieren oder zu verlassen.</li>
+                <li>Bei Beginn jedes Minispiels gibt es einen Button, der dir die Steuerung und das Ziel des jeweiligen Spiels erklärt.</li>
+            </ul>
+            <p>
+
+            </p>
+            <p>
+            </p>
+            <p>
+
+            </p>
+            <p>
             </p>
         </div>
     </div>
