minor changes + updated readme file

--- a/readme.html
+++ b/readme.html
@@ -18,7 +18,7 @@
         <h2 id="team">Unser Team</h2>
         <div id="team-row">
             <div class="team-member">
-                <img class="img-member" src="img/lennart_portrait.jpg">
+                <img class="img-member" src="img/julian_portrait.jpeg">
                 <div class="description">
                     <h3 class="team-name">Julian Klink</h3>
                     <!--<p class="sub_headline">Hauptaufgaben:</p>
@@ -155,12 +155,17 @@
         </div>
         <div class="installation-tipps">
             <h2 class="headline-game-concept">Installation</h2>
-            <ul style="padding-inline-start: 20px">
-                <li>Bewege die Spielfigur in der Overworld mit den Tasten W, A, S und D, oder mit den Pfeiltasten.</li>
-                <li>Klicke links oben im Eck auf das Fragezeichen, um Informationen zur Story und Steuerung zu erhalten.</li>
-                <li>Klicke rechts oben im Eck auf das Zahnrad-Symbol, um den Spielstand zu speichern, den Ton auszuschalten, das Spiel zu pausieren oder zu verlassen.</li>
-                <li>Bei Beginn jedes Minispiels gibt es einen Button, der dir die Steuerung und das Ziel des jeweiligen Spiels erklärt.</li>
-            </ul>
+            <div id="download-container">
+                <a id="download-button" href="Echoes_of_the_Past.zip">
+                    <img id="download-icon" src="img/download-icon.png">
+                    <p>Download zip-file</p>
+                </a>
+            </div>
+            <ol>
+                <li>Entpacke die zip-Datei in einen Ordner Deiner Wahl</li>
+                <li>Öffne die 'echoes_of_the_past.exe'-Datei</li>
+                <li>Viel Spaß beim Spielen!</li>
+            </ol>
         </div>
         <div class="installation-tipps">
             <h2 class="headline-game-concept">Tipps und Hilfe</h2>
