finished readme + minor changes

--- a/readme.html
+++ b/readme.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Save The World</title>
+    <title>Echoes of the Past: A Mission to Save Humanity</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="img/apocalypse_bg.png"/>
     <script src="script.js"></script>
 
 </head>
@@ -74,7 +75,7 @@
     <div class="project-container">
         <div id="jump-n-run">
             <h2 class="headline-game-concept">Regenwasser sammeln</h2>
-            <img class="game-img" src="img/overworld.png">
+            <img class="game-img" src="img/jump_n_run.jpg">
             <h3 class="story-headline">Vorgeschichte:</h3>
             <p>Unser Planet ist zu zwei Dritteln mit Wasser bedeckt und trotzdem herrscht eine akute Wasserknappheit. Nur 3% der weltweiten Wasservorräte sind trinkbares Süßwasser.
                 <br>
@@ -96,7 +97,7 @@
         </div>
         <div id="temple-run">
             <h2 class="headline-game-concept">Flucht vor dem Feuer</h2>
-            <img class="game-img" src="img/overworld.png">
+            <img class="game-img" src="img/endless_runner.jpg">
             <h3 class="story-headline">Vorgeschichte:</h3>
             <p>August 2019: Innerhalb von 5 Tagen verbrennen 471.000 Hektar Wald, Weiden und Felder im Amazonas.
                 Auslöser ist die derzeit herrschende Dürre und Brandlegung des Menschen.
@@ -152,6 +153,9 @@
             <div class="doc-pages">
                 <a href="https://trello.com/w/dhprojekt1" target="_blank"><img class="doc-logos" style="background-color: rgba(0,0,0,0) !important;" src="img/trello-logo.png"><h3>Trello &#8250;</h3> </a>
             </div>
+            <div class="doc-pages">
+                <a href="https://soundcloud.com/pichl-michl/echoes-of-the-past-a-mission-to-save-sumanity-full-soundtrack?si=4def78e087144419aeeaa310400d5c45&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank"><img class="doc-logos" style="background-color: rgba(0,0,0,0) !important;" src="img/soundcloud_logo.png"><h3>Soundcloud &#8250;</h3> </a>
+            </div>
         </div>
         <div class="installation-tipps">
             <h2 class="headline-game-concept">Installation</h2>
@@ -175,16 +179,6 @@
                 <li>Klicke rechts oben im Eck auf das Zahnrad-Symbol, um den Spielstand zu speichern, den Ton auszuschalten, das Spiel zu pausieren oder zu verlassen.</li>
                 <li>Bei Beginn jedes Minispiels gibt es einen Button, der dir die Steuerung und das Ziel des jeweiligen Spiels erklärt.</li>
             </ul>
-            <p>
-
-            </p>
-            <p>
-            </p>
-            <p>
-
-            </p>
-            <p>
-            </p>
         </div>
     </div>
 </section>
