--- a/readme.html
+++ b/readme.html
@@ -160,9 +160,13 @@
         <div class="installation-tipps">
             <h2 class="headline-game-concept">Installation</h2>
             <div id="download-container">
-                <a id="download-button" href="Echoes_of_the_Past.zip">
-                    <img id="download-icon" src="img/download-icon.png">
-                    <p>Download zip-file</p>
+                <a class="download-button" href="Echoes_of_the_Past_win.zip">
+                    <img class="download-icon" src="img/download-icon.png">
+                    <p>Download for Windows</p>
+                </a>
+                <a class="download-button" href="Echoes_of_the_Past_mac.zip">
+                    <img class="download-icon" src="img/download-icon.png">
+                    <p>Download for Mac</p>
                 </a>
             </div>
             <ol>
