edited download-button in readme file

--- a/readme.html
+++ b/readme.html
@@ -164,10 +164,10 @@
                     <img class="download-icon" src="img/download-icon.png">
                     <p>Download for Windows</p>
                 </a>
-                <a class="download-button" href="Echoes_of_the_Past_mac.zip">
+               <!-- <a class="download-button" href="echoes-of-the-past-mac.app">
                     <img class="download-icon" src="img/download-icon.png">
                     <p>Download for Mac</p>
-                </a>
+                </a>-->
             </div>
             <ol>
                 <li>Entpacke die zip-Datei in einen Ordner Deiner Wahl</li>
