added mac app to readme file
No further changes on the project

--- a/readme.html
+++ b/readme.html
@@ -164,14 +164,21 @@
                     <img class="download-icon" src="img/download-icon.png">
                     <p>Download for Windows</p>
                 </a>
-               <!-- <a class="download-button" href="echoes-of-the-past-mac.app">
+                <a class="download-button" href="Game_Mac_Build.zip">
                     <img class="download-icon" src="img/download-icon.png">
                     <p>Download for Mac</p>
-                </a>-->
+                </a>
             </div>
+            <h3>Für Windows:</h3>
             <ol>
                 <li>Entpacke die zip-Datei in einen Ordner Deiner Wahl</li>
                 <li>Öffne die 'echoes_of_the_past.exe'-Datei</li>
+                <li>Viel Spaß beim Spielen!</li>
+            </ol>
+          <h3>Für MacOS:</h3>
+            <ol>
+                <li>Entpacke die zip-Datei in einen Ordner Deiner Wahl</li>
+                <li>Starte die Application </li>
                 <li>Viel Spaß beim Spielen!</li>
             </ol>
         </div>
